--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
+  "homepage": "http://rannem.github.io/rannem.github.io",
   "name": "portifolio",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "vite": "^2.6.4"
   },
   "dependencies": {
